--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Roberto A. Cardenas – Cloud Portfolio</title>
   <style>
     body {
@@ -10,12 +10,11 @@
       background-color: #0d1117;
       color: #c9d1d9;
       padding: 2rem;
-      line-height: 1.6;
     }
     h1 {
       color: #58a6ff;
-      border-bottom: 1px solid #30363d;
-      padding-bottom: 0.5rem;
+      font-size: 2em;
+      margin-bottom: 1rem;
     }
     a {
       color: #58a6ff;
@@ -25,66 +24,71 @@
       text-decoration: underline;
     }
     .project {
-      margin-bottom: 2rem;
+      margin-bottom: 1.75rem;
     }
     .project h2 {
       margin: 0;
+      font-size: 1.3rem;
     }
     .container {
-      max-width: 800px;
+      max-width: 850px;
       margin: auto;
+    }
+    .description {
+      margin-top: 0.2rem;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Roberto A. Cardenas – Cloud Portfolio</h1>
-    <p>Welcome! I’m a Cloud Engineer with a background in IT and finance, focused on building real-world AWS infrastructure using Terraform and Python. Below are some of my completed projects:</p>
+    <p>Welcome! Below are some of my completed cloud engineering projects using AWS and Terraform.</p>
 
     <div class="project">
       <h2><a href="https://github.com/Roberto-A-Cardenas/aws-nginx-terraform">Secure Nginx on AWS</a></h2>
-      <p>Provisioned a secure EC2 instance running Nginx, with IAM roles and detailed CloudWatch monitoring.</p>
+      <p class="description">Provisioned an EC2 instance with Nginx, IAM roles, and CloudWatch metrics/alarms using Terraform.</p>
     </div>
 
     <div class="project">
       <h2><a href="https://github.com/Roberto-A-Cardenas/scalable-web-app">Scalable Web App with Load Balancer</a></h2>
-      <p>Deployed a Flask app behind an Application Load Balancer using Auto Scaling Groups and Launch Templates.</p>
+      <p class="description">Deployed a Flask app using Auto Scaling Groups, Application Load Balancer, and Launch Templates.</p>
     </div>
 
     <div class="project">
-      <h2><a href="https://github.com/Roberto-A-Cardenas/terraform-aws-vpc-ec2-monitoring">Custom VPC + CloudWatch</a></h2>
-      <p>Built a custom VPC with public/private subnets, EC2, and CloudWatch metrics/alarms using Terraform.</p>
+      <h2><a href="https://github.com/Roberto-A-Cardenas/terraform-aws-vpc-ec2-monitoring">Custom VPC + Monitoring</a></h2>
+      <p class="description">Built a custom VPC with public/private subnets, EC2 instance, and CloudWatch monitoring with alarms.</p>
     </div>
 
     <div class="project">
-      <h2><a href="https://github.com/Roberto-A-Cardenas/Rds-Flask-App">RDS-backed Flask App</a></h2>
-      <p>Connected a Flask web app to a managed PostgreSQL RDS instance with secure networking.</p>
+      <h2><a href="https://github.com/Roberto-A-Cardenas/Rds-Flask-App">Flask App with PostgreSQL RDS</a></h2>
+      <p class="description">Deployed a Python Flask web app that securely connects to a PostgreSQL RDS backend in a VPC.</p>
     </div>
 
     <div class="project">
-      <h2><a href="https://github.com/Roberto-A-Cardenas/s3-static-site">Static Website with S3 and CloudFront</a></h2>
-      <p>Hosted a static portfolio site on S3 with CloudFront CDN, HTTPS, and public access configuration.</p>
+      <h2><a href="https://github.com/Roberto-A-Cardenas/s3-static-site">Static Site on S3 with CloudFront</a></h2>
+      <p class="description">Hosted a static website on S3 with CloudFront CDN, HTTPS, and public access configuration.</p>
     </div>
 
     <div class="project">
       <h2><a href="https://github.com/Roberto-A-Cardenas/terraform-ec2-flask-cloudwatch">EC2 Flask + CloudWatch Logs</a></h2>
-      <p>Deployed a Flask app on EC2 and streamed logs to CloudWatch using the CloudWatch Agent and Terraform.</p>
+      <p class="description">Deployed a Flask app on EC2 with CloudWatch log integration using the CloudWatch Agent and Terraform.</p>
     </div>
 
     <div class="project">
       <h2><a href="https://github.com/Roberto-A-Cardenas/Multi-tier-webapp">Multi-tier Web App with RDS + ALB</a></h2>
-      <p>Full-stack deployment with Flask app, MySQL RDS, ALB, and Bastion host using Terraform modules.</p>
+      <p class="description">Built a full-stack Flask application with MySQL RDS backend, ALB, Bastion host, and secure VPC networking.</p>
     </div>
 
     <div class="project">
       <h2><a href="https://github.com/Roberto-A-Cardenas/terraform-ci-cd-s3-pipeline">CI/CD Pipeline for S3 Static Site</a></h2>
-      <p>Implemented GitHub Actions for automatic S3 deployment, versioning, and CloudFront invalidation.</p>
+      <p class="description">Implemented a GitHub Actions CI/CD pipeline for deploying and versioning a static S3 site with CloudFront.</p>
     </div>
 
     <div class="project">
       <h2><a href="https://github.com/Roberto-A-Cardenas/serverless-api-lambda">Serverless API with Lambda</a></h2>
-      <p>Created a Lambda + API Gateway backend using Terraform with logging and environment variables.</p>
+      <p class="description">Created a serverless API using AWS Lambda and API Gateway, with logging, permissions, and environment setup via Terraform.</p>
     </div>
+
   </div>
 </body>
 </html>
