--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <body>
   <div class="container">
     <h1>Roberto A. Cardenas – Cloud Portfolio</h1>
+    <p><a href="about.html">About</a> | <a href="contact.html">Contact</a></p>
     <p>Welcome! Below are some of my completed cloud engineering projects using AWS and Terraform.</p>
 
     <div class="project">
