--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,11 @@
   <h1>Contact</h1>
   <p>If you'd like to reach out, feel free to connect or message me via:</p>
   <ul>
-    <li>Email: <a href="mailto:roberto.a.cardenas2@gmail.com">yourname@example.com</a></li>
-    <li>GitHub: <a href="https://github.com/Roberto-A-Cardenas" target="_blank">Roberto-A-Cardenas</a></li>
-    <li>LinkedIn: <a href="https://www.linkedin.com/in/roberto-cardenas-940a8194/" target="_blank">linkedin.com/in/your-link</a></li>
+  <li>Email: <a href="mailto:roberto.a.cardenas2@gmail.com">roberto.a.cardenas2@gmail.com</a></li>
+  <li>GitHub: <a href="https://github.com/Roberto-A-Cardenas" target="_blank">github.com/Roberto-A-Cardenas</a></li>
+  <li>LinkedIn: <a href="https://www.linkedin.com/in/roberto-cardenas-940a8194/" target="_blank">linkedin.com/in/roberto-cardenas-940a8194</a></li>
+</ul>
+
   </ul>
   <p><a href="index.html">← Back to Home</a></p>
 </body>
