--- a/contact.html
+++ b/contact.html
@@ -4,42 +4,31 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact – Roberto A. Cardenas</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #0d1117;
-      color: #c9d1d9;
-      padding: 2rem;
-      max-width: 800px;
-      margin: auto;
-    }
-    h1 {
-      color: #58a6ff;
-      border-bottom: 1px solid #30363d;
-      padding-bottom: 0.5rem;
-    }
-    a {
-      color: #58a6ff;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    p {
-      margin-bottom: 1rem;
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <h1>Contact</h1>
-  <p>If you'd like to reach out, feel free to connect or message me via:</p>
-  <ul>
-  <li>Email: <a href="mailto:roberto.a.cardenas2@gmail.com">roberto.a.cardenas2@gmail.com</a></li>
-  <li>GitHub: <a href="https://github.com/Roberto-A-Cardenas" target="_blank">github.com/Roberto-A-Cardenas</a></li>
-  <li>LinkedIn: <a href="https://www.linkedin.com/in/roberto-cardenas-940a8194/" target="_blank">linkedin.com/in/roberto-cardenas-940a8194</a></li>
-</ul>
+<body class="bg-dark text-light">
+  <div class="container py-5">
+    <h1 class="text-primary mb-4">Contact</h1>
 
-  </ul>
-  <p><a href="index.html">← Back to Home</a></p>
+    <p>If you'd like to reach out, feel free to connect or message me via:</p>
+    <ul class="list-unstyled">
+      <li class="mb-2">
+        <strong>Email:</strong>
+        <a href="mailto:roberto.a.cardenas2@gmail.com" class="text-info">roberto.a.cardenas2@gmail.com</a>
+      </li>
+      <li class="mb-2">
+        <strong>GitHub:</strong>
+        <a href="https://github.com/Roberto-A-Cardenas" class="text-info" target="_blank">github.com/Roberto-A-Cardenas</a>
+      </li>
+      <li class="mb-2">
+        <strong>LinkedIn:</strong>
+        <a href="https://www.linkedin.com/in/roberto-cardenas-940a8194/" class="text-info" target="_blank">linkedin.com/in/roberto-cardenas-940a8194</a>
+      </li>
+    </ul>
+
+    <p class="mt-4">
+      <a href="index.html" class="text-warning">&larr; Back to Home</a>
+    </p>
+  </div>
 </body>
 </html>
