--- a/about.html
+++ b/about.html
@@ -3,32 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About Me – Roberto A. Cardenas</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #0d1117;
-      color: #c9d1d9;
-      padding: 2rem;
-      max-width: 800px;
-      margin: auto;
-    }
-    h1 {
-      color: #58a6ff;
-      border-bottom: 1px solid #30363d;
-      padding-bottom: 0.5rem;
-    }
-    a {
-      color: #58a6ff;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <title>About – Roberto A. Cardenas</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <h1>About Me</h1>
+<body class="bg-dark text-light">
+  <div class="container py-5">
+    <h1 class="text-primary mb-4">About Me</h1>
   <p>Hello! I’m <strong>Roberto A. Cardenas</strong>, an IT professional transitioning into Cloud Engineering. With a strong foundation in finance and cybersecurity, I now build scalable, secure, and automated infrastructure on AWS using Terraform, Python, and CI/CD pipelines.</p>
   <p>I’m passionate about solving problems with infrastructure-as-code and deploying full-stack applications that run reliably in the cloud. I’m also working toward a broader goal of buying a ranch and launching a nonprofit initiative to give back.</p>
   <p>When I’m not coding or deploying infrastructure, you’ll find me studying cloud security, working on side projects, or exploring how to blend crypto and gaming technology.</p>
