--- a/contact.html
+++ b/contact.html
@@ -12,23 +12,12 @@
 
     <p>If you'd like to reach out, feel free to connect or message me via:</p>
     <ul class="list-unstyled">
-      <li class="mb-2">
-        <strong>Email:</strong>
-        <a href="mailto:roberto.a.cardenas2@gmail.com" class="text-info">roberto.a.cardenas2@gmail.com</a>
-      </li>
-      <li class="mb-2">
-        <strong>GitHub:</strong>
-        <a href="https://github.com/Roberto-A-Cardenas" class="text-info" target="_blank">github.com/Roberto-A-Cardenas</a>
-      </li>
-      <li class="mb-2">
-        <strong>LinkedIn:</strong>
-        <a href="https://www.linkedin.com/in/roberto-cardenas-940a8194/" class="text-info" target="_blank">linkedin.com/in/roberto-cardenas-940a8194</a>
-      </li>
+      <li class="mb-2"><strong>Email:</strong> <a href="mailto:roberto.a.cardenas2@gmail.com" class="text-info">roberto.a.cardenas2@gmail.com</a></li>
+      <li class="mb-2"><strong>GitHub:</strong> <a href="https://github.com/Roberto-A-Cardenas" class="text-info" target="_blank">github.com/Roberto-A-Cardenas</a></li>
+      <li class="mb-2"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/roberto-cardenas-940a8194/" class="text-info" target="_blank">linkedin.com/in/roberto-cardenas-940a8194</a></li>
     </ul>
 
-    <p class="mt-4">
-      <a href="index.html" class="text-warning">&larr; Back to Home</a>
-    </p>
+    <a href="index.html" class="text-warning">&larr; Back to Home</a>
   </div>
 </body>
 </html>
