--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <div class="container py-5">
     <h1 class="text-primary mb-3">Roberto A. Cardenas – Cloud Portfolio</h1>
 
-    <nav class="mb-4">
-      <a href="index.html" class="text-info me-3">Home</a>
-      <a href="about.html" class="text-info me-3">About</a>
-      <a href="contact.html" class="text-info">Contact</a>
-    </nav>
+<p>
+  <a href="index.html" class="text-info me-3">Home</a>
+  <a href="about.html" class="text-info me-3">About</a>
+  <a href="contact.html" class="text-info me-3">Contact</a>
+  <a href="https://github.com/Roberto-A-Cardenas/Cloud-Portfolio" class="text-info me-3" target="_blank">View on GitHub</a>
+  <a href="https://github.com/Roberto-A-Cardenas/Cloud-Portfolio/blob/main/README.md" class="text-info" target="_blank">View README</a>
+</p>
 
     <p class="mb-4">Welcome! Below are some of my completed cloud engineering projects using AWS and Terraform.</p>
 
