--- a/index.html
+++ b/index.html
@@ -5,18 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Roberto A. Cardenas – Cloud Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body class="bg-dark text-light">
+
+  <!-- ✅ Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-black border-bottom border-secondary">
+    <div class="container">
+      <a class="navbar-brand text-primary" href="index.html">R.A. Cardenas</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link text-info" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link text-info" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link text-info" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link text-info" href="https://github.com/Roberto-A-Cardenas/Cloud-Portfolio" target="_blank">GitHub</a></li>
+          <li class="nav-item"><a class="nav-link text-info" href="https://github.com/Roberto-A-Cardenas/Cloud-Portfolio/blob/main/README.md" target="_blank">README</a></li>
+          <li class="nav-item"><a class="btn btn-sm btn-outline-info ms-2" href="resume.pdf" target="_blank"><i class="bi bi-download"></i> Resume</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- ✅ Main Content -->
   <div class="container py-5">
-    <h1 class="text-primary mb-3">Roberto A. Cardenas – Cloud Portfolio</h1>
-<p>
-  <a href="index.html" class="text-info me-3">Home</a>
-  <a href="about.html" class="text-info me-3">About</a>
-  <a href="contact.html" class="text-info me-3">Contact</a>
-  <a href="https://github.com/Roberto-A-Cardenas/Cloud-Portfolio" class="text-info me-3" target="_blank">View on GitHub</a>
-  <a href="https://github.com/Roberto-A-Cardenas/Cloud-Portfolio/blob/main/README.md" class="text-info" target="_blank">View README</a>
-</p>
-  <p class="mb-4">Welcome! Below are some of my completed cloud engineering projects using AWS and Terraform.</p>
+    <h1 class="text-primary mb-4">Cloud Portfolio</h1>
+    <p class="mb-4">Welcome! Below are some of my completed cloud engineering projects using AWS, Terraform, and CI/CD pipelines.</p>
 
     <div class="mb-4">
       <h4><a class="text-warning" href="https://github.com/Roberto-A-Cardenas/aws-nginx-terraform">Secure Nginx on AWS</a></h4>
@@ -28,40 +45,23 @@
       <p>Flask app with Load Balancer and Auto Scaling Groups.</p>
     </div>
 
-    <div class="mb-4">
-      <h4><a class="text-warning" href="https://github.com/Roberto-A-Cardenas/terraform-aws-vpc-ec2-monitoring">Custom VPC + Monitoring</a></h4>
-      <p>Built VPC with subnets, EC2 instance, and CloudWatch alarms.</p>
-    </div>
+    <!-- Add the remaining projects here in same format -->
 
-    <div class="mb-4">
-      <h4><a class="text-warning" href="https://github.com/Roberto-A-Cardenas/Rds-Flask-App">Flask App with PostgreSQL RDS</a></h4>
-      <p>Securely connects a Python Flask app to a PostgreSQL RDS backend.</p>
-    </div>
-
-    <div class="mb-4">
-      <h4><a class="text-warning" href="https://github.com/Roberto-A-Cardenas/s3-static-site">Static Site on S3 with CloudFront</a></h4>
-      <p>Hosted static portfolio site with CDN, HTTPS, and S3.</p>
-    </div>
-
-    <div class="mb-4">
-      <h4><a class="text-warning" href="https://github.com/Roberto-A-Cardenas/terraform-ec2-flask-cloudwatch">EC2 Flask + CloudWatch Logs</a></h4>
-      <p>Deployed a Flask app on EC2 with log streaming via CloudWatch Agent.</p>
-    </div>
-
-    <div class="mb-4">
-      <h4><a class="text-warning" href="https://github.com/Roberto-A-Cardenas/Multi-tier-webapp">Multi-tier Web App</a></h4>
-      <p>Built full-stack architecture with Flask, MySQL RDS, ALB, and Bastion host.</p>
-    </div>
-
-    <div class="mb-4">
-      <h4><a class="text-warning" href="https://github.com/Roberto-A-Cardenas/terraform-ci-cd-s3-pipeline">CI/CD Pipeline for S3</a></h4>
-      <p>GitHub Actions workflow for automated deployment of S3 website.</p>
-    </div>
-
-    <div class="mb-4">
-      <h4><a class="text-warning" href="https://github.com/Roberto-A-Cardenas/serverless-api-lambda">Serverless API with Lambda</a></h4>
-      <p>Serverless API using Lambda and API Gateway with logging and environment setup.</p>
-    </div>
   </div>
+
+  <!-- ✅ Footer -->
+  <footer class="bg-black text-center text-secondary py-4 mt-5 border-top border-secondary">
+    <div class="container">
+      <small>&copy; 2025 Roberto A. Cardenas &middot;
+        <a href="https://github.com/Roberto-A-Cardenas" class="text-info">GitHub</a>
+        &middot;
+        <a href="https://www.linkedin.com/in/roberto-cardenas-940a8194/" class="text-info" target="_blank">LinkedIn</a>
+      </small>
+    </div>
+  </footer>
+
+  <!-- ✅ Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
