--- a/contact.html
+++ b/contact.html
@@ -4,20 +4,52 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact – Roberto A. Cardenas</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 </head>
 <body class="bg-dark text-light">
-  <div class="container py-5">
-    <h1 class="text-primary mb-4">Contact</h1>
 
-    <p>If you'd like to reach out, feel free to connect or message me via:</p>
-    <ul class="list-unstyled">
-      <li class="mb-2"><strong>Email:</strong> <a href="mailto:roberto.a.cardenas2@gmail.com" class="text-info">roberto.a.cardenas2@gmail.com</a></li>
-      <li class="mb-2"><strong>GitHub:</strong> <a href="https://github.com/Roberto-A-Cardenas" class="text-info" target="_blank">github.com/Roberto-A-Cardenas</a></li>
-      <li class="mb-2"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/roberto-cardenas-940a8194/" class="text-info" target="_blank">linkedin.com/in/roberto-cardenas-940a8194</a></li>
-    </ul>
-
-    <a href="index.html" class="text-warning">&larr; Back to Home</a>
+<!-- ✅ Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-black border-bottom border-secondary">
+  <div class="container">
+    <a class="navbar-brand text-primary" href="index.html">R.A. Cardenas</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link text-info" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-info" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link text-info" href="contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link text-info" href="https://github.com/Roberto-A-Cardenas/Cloud-Portfolio" target="_blank">GitHub</a></li>
+        <li class="nav-item"><a class="nav-link text-info" href="https://github.com/Roberto-A-Cardenas/Cloud-Portfolio/blob/main/README.md" target="_blank">README</a></li>
+        <li class="nav-item"><a class="btn btn-sm btn-outline-info ms-2" href="resume.pdf" target="_blank"><i class="bi bi-download"></i> Resume</a></li>
+      </ul>
+    </div>
   </div>
+</nav>
+
+<div class="container py-5">
+  <h1 class="text-primary mb-4">Contact</h1>
+  <p>Feel free to connect with me through any of the following platforms:</p>
+  <ul class="list-unstyled">
+    <li><strong>Email:</strong> <a href="mailto:roberto.a.cardenas2@gmail.com" class="text-info">roberto.a.cardenas2@gmail.com</a></li>
+    <li><strong>GitHub:</strong> <a href="https://github.com/Roberto-A-Cardenas" class="text-info" target="_blank">github.com/Roberto-A-Cardenas</a></li>
+    <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/roberto-cardenas-940a8194/" class="text-info" target="_blank">linkedin.com/in/roberto-cardenas-940a8194</a></li>
+  </ul>
+</div>
+
+<!-- ✅ Footer -->
+<footer class="bg-black text-center text-secondary py-4 mt-5 border-top border-secondary">
+  <div class="container">
+    <small>&copy; 2025 Roberto A. Cardenas &middot;
+      <a href="https://github.com/Roberto-A-Cardenas" class="text-info">GitHub</a>
+      &middot;
+      <a href="https://www.linkedin.com/in/roberto-cardenas-940a8194/" class="text-info" target="_blank">LinkedIn</a>
+    </small>
+  </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
