--- a/about.html
+++ b/about.html
@@ -1,17 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About – Roberto A. Cardenas</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-dark text-light">
-  <div class="container py-5">
-    <h1 class="text-primary mb-4">About Me</h1>
-  <p>Hello! I’m <strong>Roberto A. Cardenas</strong>, an IT professional transitioning into Cloud Engineering. With a strong foundation in finance and cybersecurity, I now build scalable, secure, and automated infrastructure on AWS using Terraform, Python, and CI/CD pipelines.</p>
-  <p>I’m passionate about solving problems with infrastructure-as-code and deploying full-stack applications that run reliably in the cloud. I’m also working toward a broader goal of buying a ranch and launching a nonprofit initiative to give back.</p>
-  <p>When I’m not coding or deploying infrastructure, you’ll find me studying cloud security, working on side projects, or exploring how to blend crypto and gaming technology.</p>
-  <p><a href="index.html">← Back to Home</a></p>
-</body>
-</html>
+<div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="col">
+    <div class="card bg-secondary text-light h-100 border-info shadow-sm">
+      <div class="card-body">
+        <h5 class="card-title"><a href="https://github.com/Roberto-A-Cardenas/aws-nginx-terraform" class="text-warning">Secure Nginx on AWS</a></h5>
+        <p class="card-text">Provisioned EC2 with Nginx, IAM, and CloudWatch using Terraform.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col">
+    <div class="card bg-secondary text-light h-100 border-info shadow-sm">
+      <div class="card-body">
+        <h5 class="card-title"><a href="https://github.com/Roberto-A-Cardenas/scalable-web-app" class="text-warning">Scalable Web App</a></h5>
+        <p class="card-text">Flask app with Load Balancer and Auto Scaling Groups.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Repeat this pattern for each remaining project -->
+</div>
