--- a/index.html
+++ b/index.html
@@ -44,7 +44,82 @@
       <h4><a class="text-warning" href="https://github.com/Roberto-A-Cardenas/scalable-web-app">Scalable Web App</a></h4>
       <p>Flask app with Load Balancer and Auto Scaling Groups.</p>
     </div>
+  <div class="col">
+    <div class="card bg-secondary text-light h-100 border-info shadow-sm">
+      <div class="card-body">
+        <h5 class="card-title">
+          <a href="https://github.com/Roberto-A-Cardenas/terraform-aws-vpc-ec2-monitoring" class="text-warning">Custom VPC + Monitoring</a>
+        </h5>
+        <p class="card-text">Built VPC with subnets, EC2 instance, and CloudWatch alarms.</p>
+      </div>
+    </div>
+  </div>
 
+  <div class="col">
+    <div class="card bg-secondary text-light h-100 border-info shadow-sm">
+      <div class="card-body">
+        <h5 class="card-title">
+          <a href="https://github.com/Roberto-A-Cardenas/Rds-Flask-App" class="text-warning">Flask App with PostgreSQL RDS</a>
+        </h5>
+        <p class="card-text">Securely connects a Python Flask app to a PostgreSQL RDS backend.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col">
+    <div class="card bg-secondary text-light h-100 border-info shadow-sm">
+      <div class="card-body">
+        <h5 class="card-title">
+          <a href="https://github.com/Roberto-A-Cardenas/s3-static-site" class="text-warning">Static Site on S3 with CloudFront</a>
+        </h5>
+        <p class="card-text">Hosted a static site with CDN, HTTPS, and S3 public access config.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col">
+    <div class="card bg-secondary text-light h-100 border-info shadow-sm">
+      <div class="card-body">
+        <h5 class="card-title">
+          <a href="https://github.com/Roberto-A-Cardenas/terraform-ec2-flask-cloudwatch" class="text-warning">EC2 Flask + CloudWatch Logs</a>
+        </h5>
+        <p class="card-text">Deployed a Flask app on EC2 with log streaming via CloudWatch Agent.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col">
+    <div class="card bg-secondary text-light h-100 border-info shadow-sm">
+      <div class="card-body">
+        <h5 class="card-title">
+          <a href="https://github.com/Roberto-A-Cardenas/Multi-tier-webapp" class="text-warning">Multi-tier Web App</a>
+        </h5>
+        <p class="card-text">Full-stack app with Flask, MySQL RDS, ALB, Bastion, and secure VPC.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col">
+    <div class="card bg-secondary text-light h-100 border-info shadow-sm">
+      <div class="card-body">
+        <h5 class="card-title">
+          <a href="https://github.com/Roberto-A-Cardenas/terraform-ci-cd-s3-pipeline" class="text-warning">CI/CD Pipeline for S3</a>
+        </h5>
+        <p class="card-text">GitHub Actions pipeline for automated deployment of a static S3 site.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col">
+    <div class="card bg-secondary text-light h-100 border-info shadow-sm">
+      <div class="card-body">
+        <h5 class="card-title">
+          <a href="https://github.com/Roberto-A-Cardenas/serverless-api-lambda" class="text-warning">Serverless API with Lambda</a>
+        </h5>
+        <p class="card-text">Built a serverless API using Lambda, API Gateway, logging, and env vars via Terraform.</p>
+      </div>
+    </div>
+  </div>
     <!-- Add the remaining projects here in same format -->
 
   </div>
